--- a/easy_ddt/i18n/it.po
+++ b/easy_ddt/i18n/it.po
@@ -76,14 +76,21 @@ msgstr "Trasportatore\n"
 "                                        Firma"
 
 #. module: easy_ddt
+#: model:ir.ui.view,arch_db:easy_ddt.delivery_data
+msgid "Carrier's\n"
+"                                    Signature"
+msgstr "Trasportatore\n"
+"                                    Firma"
+
+#. module: easy_ddt
 #: model:stock.picking.carriage_condition,name:easy_ddt.carriage_condition_PAF
 msgid "Charged in Invoice"
 msgstr "Con addebito in fattura"
 
 #. module: easy_ddt
-#: view:website:easy_ddt.report_easy_ddt
-msgid "Code"
-msgstr "Codice"
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Code</strong>"
+msgstr "<strong>Codice</strong>"
 
 #. module: easy_ddt
 #: field:stock.ddt.type,company_id:0
@@ -91,9 +98,9 @@ msgid "Company"
 msgstr "Azienda"
 
 #. module: easy_ddt
-#: view:website:easy_ddt.report_easy_ddt
-msgid "Customer :"
-msgstr "Cliente :"
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Customer :</strong>"
+msgstr "<strong>Cliente :</strong>"
 
 #. module: easy_ddt
 #: model:ir.actions.report.xml,name:easy_ddt.action_report_easy_ddt
@@ -131,11 +138,6 @@ msgid "DdT Type"
 msgstr "Tipo DDT"
 
 #. module: easy_ddt
-#: view:website:easy_ddt.report_easy_ddt
-msgid "Delivery Address:"
-msgstr "Indirizzo di Consegna:"
-
-#. module: easy_ddt
 #: field:stock.picking,ddt_notes:0
 msgid "Delivery Note Notes"
 msgstr "Note del DDT"
@@ -151,19 +153,9 @@ msgid "Delivery note Date"
 msgstr "Data Inizio Trasporto"
 
 #. module: easy_ddt
-#: view:website:easy_ddt.report_easy_ddt
-msgid "Description"
-msgstr "Descrizione"
-
-#. module: easy_ddt
-#: field:account.invoice,goods_description_id:0
-#: model:ir.model,name:easy_ddt.model_stock_picking_goods_description
-#: field:res.partner,goods_description_id:0
-#: field:stock.picking,goods_description_id:0
-#: view:stock.picking.goods_description:easy_ddt.stock_goods_description_form
-#: field:stock.picking.goods_description,name:0
-msgid "Description of Goods"
-msgstr "Aspetto dei beni"
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Description</strong>"
+msgstr "<strong>Descrizione</strong>"
 
 #. module: easy_ddt
 #: model:ir.actions.act_window,name:easy_ddt.action_goods_description_tree
@@ -187,6 +179,13 @@ msgid "Driver's\n"
 "                                        Signature"
 msgstr "Autista \n"
 "                                        Firma"
+
+#. module: easy_ddt
+#: model:ir.ui.view,arch_db:easy_ddt.delivery_data
+msgid "Driver's\n"
+"                                    Signature"
+msgstr "Autista\n"
+"                                    Firma"
 
 #. module: easy_ddt
 #: field:stock.ddt.type,message_follower_ids:0
@@ -306,7 +305,7 @@ msgstr "Note"
 #. module: easy_ddt
 #: field:account.invoice,number_of_packages:0
 msgid "Number of packages"
-msgstr "Numero di Colli"
+msgstr "Number of packages"
 
 #. module: easy_ddt
 #: view:website:easy_ddt.report_easy_ddt
@@ -339,9 +338,9 @@ msgid "Print Delivery Note"
 msgstr "Stampa DDT"
 
 #. module: easy_ddt
-#: view:website:easy_ddt.report_easy_ddt
-msgid "Quantity"
-msgstr "Quantità"
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Quantity</strong>"
+msgstr "<strong>Quantità</strong>"
 
 #. module: easy_ddt
 #: field:stock.picking.transportation_reason,name:0
@@ -375,6 +374,13 @@ msgid "Recipient's\n"
 "                                        Signature"
 msgstr "Destinatario\n"
 "                                        Firma"
+
+#. module: easy_ddt
+#: model:ir.ui.view,arch_db:easy_ddt.delivery_data
+msgid "Recipient's\n"
+"                                    Signature"
+msgstr "Destinatario\n"
+"                                    Firma"
 
 #. module: easy_ddt
 #: model:stock.picking.transportation_reason,name:easy_ddt.transportation_reason_RES
@@ -446,14 +452,14 @@ msgid "VAT:"
 msgstr "IVA:"
 
 #. module: easy_ddt
-#: view:website:easy_ddt.report_easy_ddt
-msgid "Warehouse :"
-msgstr "Magazzino :"
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Warehouse :</strong>"
+msgstr "<strong>Magazzino :</strong>"
 
 #. module: easy_ddt
 #: view:website:easy_ddt.delivery_data
 msgid "Withdrawal Date"
-msgstr "Data Inizio Spedizione"
+msgstr "Data DDT"
 
 #. module: easy_ddt
 #: view:website:easy_ddt.report_easy_ddt
@@ -466,6 +472,121 @@ msgid "traking reference :"
 msgstr "traking reference :"
 
 #. module: easy_ddt
-#: field:account.invoice,number_of_packages:0
-msgid "Number of Packages"
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Delivery Address:\n"
+"                                                    </strong>"
+msgstr "<strong>Indirizzo di Consegna:\n"
+"                                                    </strong>"
+
+#. module: easy_ddt
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Delivery Address:\n"
+"                                                </strong>"
+msgstr "<strong>Indirizzo di Consegna:\n"
+"                                                </strong>"
+
+#. module: easy_ddt
+#: model:ir.model,name:easy_ddt.model_stock_picking_goods_description
+#: model:ir.model.fields,field_description:easy_ddt.field_account_invoice_goods_description_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_partner_goods_description_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_users_goods_description_id
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_goods_description_id_9099
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_goods_description_name
+#: model:ir.ui.view,arch_db:easy_ddt.stock_goods_description_form
+msgid "Description of Goods"
+msgstr "Aspetto dei beni"
+
+#. module: easy_ddt
+#: model:ir.actions.act_window,name:easy_ddt.action_goods_description_tree
+#: model:ir.ui.menu,name:easy_ddt.menu_action_good_description_tree
+#: model:ir.ui.view,arch_db:easy_ddt.view_goods_description_tree
+msgid "Descriptions of Goods"
+msgstr "Aspetto dei beni"
+
+#. module: easy_ddt
+#: model:ir.model,name:easy_ddt.model_stock_picking_carriage_condition
+#: model:ir.model.fields,field_description:easy_ddt.field_account_invoice_carriage_condition_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_partner_carriage_condition_id
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_carriage_condition_id_9099
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_carriage_condition_name
+#: model:ir.ui.view,arch_db:easy_ddt.delivery_data
+#: model:ir.ui.view,arch_db:easy_ddt.view_carriage_condition_form
+msgid "Carriage Condition"
+msgstr "Resa merce"
+
+#. module: easy_ddt
+#: model:ir.model,name:easy_ddt.model_stock_picking_transportation_reason
+#: model:ir.model.fields,field_description:easy_ddt.field_account_invoice_transportation_reason_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_partner_transportation_reason_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_users_transportation_reason_id
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_transportation_reason_id_9092
+#: model:ir.ui.view,arch_db:easy_ddt.view_transportation_reason_form
+msgid "Reason for Transportation"
+msgstr "Causale trasporto"
+
+#. module: easy_ddt
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_time_transport_ddt
+msgid "Delivery Note Start Time"
+msgstr "Ora Ddt"
+
+#. module: easy_ddt
+#: model:ir.model,name:easy_ddt.model_stock_picking_carriage_condition
+#: model:ir.model.fields,field_description:easy_ddt.field_account_invoice_carriage_condition_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_partner_carriage_condition_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_users_carriage_condition_id
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_carriage_condition_id_9098
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_carriage_condition_name
+#: model:ir.ui.view,arch_db:easy_ddt.delivery_data
+#: model:ir.ui.view,arch_db:easy_ddt.view_carriage_condition_form
+msgid "Carriage Condition"
+msgstr "Resa merce"
+
+#. module: easy_ddt
+#: model:ir.model,name:easy_ddt.model_stock_picking_transportation_method
+#: model:ir.model.fields,field_description:easy_ddt.field_account_invoice_transportation_method_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_partner_transportation_method_id
+#: model:ir.model.fields,field_description:easy_ddt.field_res_users_transportation_method_id
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_transportation_method_id_9094
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_transportation_method_name
+#: model:ir.ui.view,arch_db:easy_ddt.view_transportation_method_form
+msgid "Method of Transportation"
+msgstr "Metodo di trasporto"
+
+#. module: easy_ddt
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_date_transport_ddt
+msgid "Delivery note Date"
+msgstr "Data Ddt"
+
+#. module: easy_ddt
+#: model:ir.model.fields,field_description:easy_ddt.field_stock_picking_ddt_notes
+msgid "Delivery Note Notes"
+msgstr "Note Ddt"
+
+#. module: easy_ddt
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "DDT number:"
+msgstr "Numero DDT:"
+
+#. module: easy_ddt
+#: model:ir.model.fields,field_description:easy_ddt.field_account_invoice_number_of_packages
+msgid "Number of packages"
 msgstr "Colli"
+
+#. module: easy_ddt
+#: model:ir.model.fields,field_description:easy_ddt.field_account_invoice_ddt_notes
+msgid "Delivery Note Notes"
+msgstr "Note DDT"
+
+#. module: easy_ddt
+#: model:ir.ui.view,arch_db:easy_ddt.delivery_data
+msgid "Time :\n"
+"                        <br/>"
+msgstr "Ora :\n"
+"                        <br/>"
+
+#. module: easy_ddt
+#: model:ir.ui.view,arch_db:easy_ddt.report_easy_ddt
+msgid "<strong>Delivery Address:\n"
+"                                            </strong>"
+msgstr "<strong>Indirizzo di Consegna:\n"
+"
